--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="horizontal_padding">16dp</dimen>
     <dimen name="vertical_padding">8dp</dimen>
+    <dimen name="title_value_space">4dp</dimen>
 </resources>
