--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -6,8 +6,8 @@
     android:background="?attr/selectableItemBackground"
     android:paddingStart="@dimen/horizontal_padding"
     android:paddingEnd="@dimen/horizontal_padding"
-    android:paddingTop="@dimen/vertical_padding"
-    android:paddingBottom="@dimen/vertical_padding"
+    android:paddingTop="@dimen/item_vertical_padding"
+    android:paddingBottom="@dimen/item_vertical_padding"
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
