--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="horizontal_padding">16dp</dimen>
-    <dimen name="vertical_padding">8dp</dimen>
+    <dimen name="vertical_padding">16dp</dimen>
+    <dimen name="item_vertical_padding">8dp</dimen>
     <dimen name="title_value_space">4dp</dimen>
+    <dimen name="drawable_padding">8dp</dimen>
 </resources>
