--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -17,7 +17,7 @@
         android:textSize="16sp"
         android:textColor="@android:color/black"
         tools:text="Buy milk"
-        android:fontFamily="@font/sans_regular"
+        android:fontFamily="@font/rubik_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="Some details here"
-        android:fontFamily="@font/sans_regular"
+        android:fontFamily="@font/rubik_regular"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
