--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,7 +21,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:fontFamily="@font/sans_bold"
+            android:fontFamily="@font/rubik_medium"
             android:text="@string/tasks"
             android:textSize="24sp"
             android:textColor="@android:color/white"
