--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#AD1457</color>
-    <color name="colorPrimaryDark">#880E4F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#0097a7</color>
+    <color name="colorPrimaryDark">#006978 </color>
+    <color name="colorAccent">#673AB7</color>
 </resources>
