--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -19,15 +19,15 @@
             android:id="@+id/btn_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/back"
             android:padding="16dp"
             android:src="@drawable/ic_arrow_back"
-            android:contentDescription="@string/back"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/textView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView"
@@ -93,28 +93,21 @@
                         android:orientation="vertical"
                         app:layout_constraintGuide_end="@dimen/horizontal_padding" />
 
-                    <android.support.design.widget.TextInputLayout
-                        android:id="@+id/til_date"
+                    <EditText
+                        android:id="@+id/et_date"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:clickable="true"
-                        android:focusable="true"
+                        android:drawablePadding="@dimen/drawable_padding"
+                        android:drawableStart="@drawable/ic_calendar"
+                        android:focusable="false"
+                        android:cursorVisible="false"
+                        android:inputType="date"
                         android:hint="@string/date"
                         app:layout_constraintBottom_toTopOf="@+id/et_title"
                         app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                         app:layout_constraintStart_toEndOf="@+id/guideline_start"
                         app:layout_constraintTop_toBottomOf="parent"
-                        app:layout_constraintVertical_chainStyle="packed">
-
-                        <android.support.design.widget.TextInputEditText
-                            android:id="@+id/et_date"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:drawablePadding="@dimen/drawable_padding"
-                            android:drawableStart="@drawable/ic_calendar"
-                            android:enabled="false" />
-
-                    </android.support.design.widget.TextInputLayout>
+                        app:layout_constraintVertical_chainStyle="packed" />
 
                     <EditText
                         android:id="@+id/et_title"
@@ -122,13 +115,13 @@
                         android:layout_height="wrap_content"
                         android:drawablePadding="@dimen/drawable_padding"
                         android:drawableStart="@drawable/ic_label_outline"
+                        android:hint="@string/title"
                         android:imeOptions="actionNext"
                         android:inputType="text"
-                        android:hint="@string/title"
                         app:layout_constraintBottom_toTopOf="@id/rv_subtasks"
                         app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                         app:layout_constraintStart_toEndOf="@+id/guideline_start"
-                        app:layout_constraintTop_toBottomOf="@+id/til_date" />
+                        app:layout_constraintTop_toBottomOf="@+id/et_date" />
 
 
                     <android.support.v7.widget.RecyclerView
